--- a/cs03.Rmd
+++ b/cs03.Rmd
@@ -46,13 +46,13 @@ Data Analysis Using Regression and Multilevel/Hierarchical Models by Gelman & Hi
 - [Binomial regression ](decks/cs03_2_deck.html)
 
 <!---
-[Multilevel Modeling Tutorial: Liz (including radon analysis from Gelman and Hill)](decks/cs03_2_deck.html)
+[Multilevel Modeling Tutorial:  (including radon analysis from Gelman and Hill)](decks/cs03_3_deck.html)
 
 
 
-[Multilevel modeling with categorical data: Liz](decks/cs03_4_deck.html)
+[Multilevel modeling with categorical data:](decks/cs03_4_deck.html)
 
-[Bayesian Hierarchical Modeing Using BMRS: Liz](decks/cs03_5_deck.html)
+[Bayesian Hierarchical Modeing Using BMRS:](decks/cs03_5_deck.html)
 
 --->
 
