--- a/decks/cs03_2_deck.Rmd
+++ b/decks/cs03_2_deck.Rmd
@@ -20,16 +20,18 @@ output:
 *Logistic regression* is a type of generalized linear model, which generalizes the typical linear model to non-Gaussian data. The logistic regression model is linear on the log of the odds: $$\log\frac{\pi_i}{1-\pi_i}=\beta_0+\beta_1x_{1i}+\cdots+\beta_px_{pi},$$ where $\pi_i=Pr(y_i=1)$.
 If the parameter $\beta_j>0$, then increasing levels of $x_j$ are associated with higher probabilities that $y=1$, and values of $\beta_j<0$ are associated with lower probabilities that $y=1$. $\beta_j=0$ is consistent with no association between $x_j$ and $y$.
 
+**Question:  where is the $\varepsilon_i$ in this model?**
+
 ## Binary outcome: the basics
 
-Suppose we have a binary outcome (e.g., $Y=1$ if diseased and $Y=0$ if not) and predictors on a variety of scales.
+Suppose we have a binary outcome (e.g., $y=1$ if diseased and $y=0$ if not) and predictors on a variety of scales.
 
 
 If the predictors are discrete and the binary outcomes are independent, we can use the Bernoulli distribution for individual 0-1 data or the binomial distribution for grouped data that are counts of successes in each group.
 
 ## Models for binary outcomes
 
-  Contingency tables for continuous predictors (and more than a few categorical predictors) can quickly become unwieldy, so we need a new analytic method to model $\pi=Pr(Y=1)$.  
+  Contingency tables for continuous predictors (and more than a few categorical predictors) can quickly become unwieldy, so we need a new analytic method to model $\pi=Pr(y=1)$.  
 
 
 One strategy might be to fit a linear regression model to the probabilities, e.g. model $$\pi_i=\beta_0+\beta_1x_i.$$  The problem is that as a probability, $\pi_i$ must be in the interval $[0,1]$, but there is nothing in the model that enforces this constraint, so that you could be estimating probabilities that are negative or that are greater than 1 -- not a good thing!  
@@ -63,18 +65,18 @@ The expression on the right is called a *logistic function* and cannot yield a v
 
 \vspace{.1in}
 
-Other transformations (also called links) can be used to ensure the probabilities lie in $[0,1]$, including the probit (popular in econometrics) and complementary log-log.  
+Other transformations (also called links) can be used to ensure the probabilities lie in $[0,1]$, including the probit (popular in econometrics) and complementary log-log. In practice these links all provide very similar fits to the data except at extreme values of $\pi_i$. 
 
 ## Interpreting parameters in logistic regression
-Typically we interpret functions of parameters in logistic regression rather than the parameters themselves.  For the model $$\log\left\{\frac{\pi_i}{1-\pi_i}\right\}=\beta_0+\beta_1x_i,$$ we note that the probability that $Y=1$ when $X=0$ is $$\frac{\exp(\beta_0)}{1+\exp(\beta_0)}.$$
+Typically we interpret functions of parameters in logistic regression rather than the parameters themselves.  For the model $$\log\frac{\pi_i}{1-\pi_i}=\beta_0+\beta_1x_i,$$ we note that the probability that $y=1$ when $x=0$ is $$\frac{\exp(\beta_0)}{1+\exp(\beta_0)}.$$
 
 
 
 ## Interpreting parameters in logistic regression
-Suppose that $X$ is a binary (0/1) variable, e.g. $X=1$ for Duke and $X=0$ for UNC.  In this case, the coefficient $\beta_1$ has a special interpretation:  we interpret $\exp(\beta_1)$ as the odds ratio of the response for the two possible levels of $X$.  For $X$ on other scales, $\exp(\beta_1)$ is interpreted as the odds ratio of the response comparing two values of $X$ one unit apart.
+Suppose that $x$ is a binary (0/1) variable, e.g. $x=1$ for Duke and $x=0$ for UNC.  In this case, the coefficient $\beta_1$ has a special interpretation:  we interpret $\exp(\beta_1)$ as the odds ratio of the response for the two possible levels of $x$.  For $x$ on other scales, $\exp(\beta_1)$ is interpreted as the odds ratio of the response comparing two values of $x$ one unit apart.
 
 
-Why?  The log odds of response for $X=1$ is given by $\beta_0+\beta_1$, and the log odds of response for $X=0$ is $\beta_0$.  So the odds ratio of response comparing $X=1$ to $X=0$ is given by $\frac{\exp(\beta_0+\beta_1)}{\exp(\beta_0)}=\exp(\beta_1)$.
+Why?  The log odds of response for $x=1$ is given by $\beta_0+\beta_1$, and the log odds of response for $x=0$ is $\beta_0$.  So the odds ratio of response comparing $x=1$ to $x=0$ is given by $\frac{\exp(\beta_0+\beta_1)}{\exp(\beta_0)}=\exp(\beta_1)$.
 
 
 
@@ -97,7 +99,7 @@ The logistic regression model can be used either for Bernoulli data (as we did i
 
 ## Contraceptive use data
 
-To illustrate, we consider data on contraceptive use as a function of age, education, and desire for more from the Fiji Fertility Survey, provided online by German Rodriguez. This survey was given in 1974 to a group of women who were aged 15-49 who had been married at least once.
+To illustrate, we consider data on contraceptive use as a function of age, education, and desire for more children from the Fiji Fertility Survey, provided online by German Rodriguez. This survey was given in 1974 to a group of women who were aged 15-49 who had been married at least once.
 
 ![<small> Table from Pagano \& Gauvreau </small>](figures/fiji.png){width=40%}
 
